@startuml
 ' Diagrama de Clases (adaptado): Factories, Servicios, Entidades y Bootstrap
 package "GameplayAdaptado" {
     package "Contratos" {
         interface ICompositionRoot
         interface IGameObjectFactory
         interface IExplosionFactory
         interface IParticulaFactory
         interface IGranadaFactory
         interface IAudioService
         interface IEntidad
     }

     package "Implementaciones" {
         class CompositionRoot
         class DefaultGameObjectFactory
         class DefaultExplosionFactory
         class DefaultParticulaFactory
         class DefaultGranadaFactory
         class AudioService (Mono)
         class SimpleAudioService
         class CoroutineRunner
         abstract class EntidadBase
         class PersonajeRefactor
         class ZombiesRefactor
         class GranadaRefactor
         class ValidateCodigo (Editor)
         class GameFactoryProvider
         class infoPartidaGuardada
     }

     ' Relacionamientos
     IGameObjectFactory <|.. DefaultGameObjectFactory
     IExplosionFactory <|.. DefaultExplosionFactory
     IParticulaFactory <|.. DefaultParticulaFactory
     IGranadaFactory <|.. DefaultGranadaFactory
     IAudioService <|.. AudioService
     IAudioService <|.. SimpleAudioService
     ICompositionRoot <|.. CompositionRoot
     IEntidad <|.. EntidadBase
     EntidadBase <|-- PersonajeRefactor
     EntidadBase <|-- ZombiesRefactor

     CompositionRoot --> DefaultGameObjectFactory : creates
     CompositionRoot --> AudioService : prefers
     CompositionRoot --> SimpleAudioService : fallback
     CompositionRoot ..> GameFactoryProvider : uses
     ValidateCodigo --> CompositionRoot : validates
     PersonajeRefactor ..> infoPartidaGuardada : persists
     PersonajeRefactor ..> IGameObjectFactory : uses
     PersonajeRefactor ..> IAudioService : uses
 }

@enduml